# Camyla

./: .gitignore  LICENSE  README.md  README_zh.md  config_example.yaml  launch_camyla.py  pyproject.toml  requirements.txt
camyla/: llm.py  model_config.py
camyla/baseline/: __init__.py  pipeline.py  run_best.py  screen_trainers.py
camyla/paper_agent/: paper_generation_api.py  recompile_latex.py  running_end_to_end.py  running_from_experiment.py
camyla/tools/: open_alex.py  semantic_scholar.py
camyla/treesearch/: agent_manager.py  compute_efficiency.py  innovation_generator.py  innovation_integration.py  interpreter.py  journal.py  log_summarization.py  openhands_coder.py  openhands_log_analyzer.py  openhands_managed_test_tool.py  parallel_agent.py  perform_experiments_qwbe_with_agentmanager.py  prompt_builder.py  proposal_diagnostic.py  qwbe_utils.py
camyla/utils/: token_tracker.py
ideas/: 900.json  901.json  902.json  903.json  904.json  905.json  906.json  907.json  908.json  909.json  910.json  911.json  912.json  913.json  914.json  915.json  916.json  918.json  919.json  920.json  921.json  922.json  923.json  924.json  925.json  926.json  927.json  928.json  930.json  931.json  932.json
skills/: README.md  __init__.py  prompt_loader.py
skills/agents/: assessment_agent.md  challenge_consolidation.md  challenge_discovery.md  citation_network_agent.md  core_theme_generation.md  openhands_interaction_summary.md  paper_summary_agent.md  phase1_query_generation.md  proposal_duplicate_check.md  research_proposal_generation.md
skills/frameworks/: README.md  (+2 more)
(+145 files in other folders)
