[project]
name = "camyla"
version = "0.1.0"
requires-python = ">=3.10"
description = "Camyla — an AI Scientist pipeline for medical image segmentation: literature search, proposal generation, QWBE experiment search, and LaTeX paper writing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yifan Gao", email = "108782764+yifangao112@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "ai scientist",
    "medical image segmentation",
    "automated research",
    "nnU-Net",
    "tree search",
    "LLM agent",
]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/yifangao112/Camyla"
repository = "https://github.com/yifangao112/Camyla"

[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["camyla*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
